--- a/src/main/resources/presentacio/comandes.fxml
+++ b/src/main/resources/presentacio/comandes.fxml
@@ -1,28 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
-
 <?import javafx.scene.*?>
-
 <?import javafx.scene.image.*?>
-
 <?import java.lang.*?>
-
 <?import javafx.geometry.*?>
-
 <?import javafx.scene.control.*?>
-
 <?import javafx.scene.layout.*?>
-
 <?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Label?>
-
 <?import javafx.scene.control.Button?>
-
 <?import javafx.geometry.Insets?>
-
-
 
 <VBox spacing="20.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="presentacio.ComandesController">
 
@@ -130,7 +117,7 @@
 
       </HBox>
 
-      <TableView id="llistat" fx:id="ordersList" VBox.vgrow="ALWAYS">
+      <TableView id="llistat" fx:id="ordersList" prefHeight="400.0" prefWidth="850.0" VBox.vgrow="ALWAYS">
 
         <columns>
 
