--- a/src/main/resources/presentacio/productes.fxml
+++ b/src/main/resources/presentacio/productes.fxml
@@ -49,7 +49,7 @@
                             <children>
                                 <TextField fx:id="textFieldCercarProducte" />
                                 <Separator opacity="0.0" orientation="VERTICAL" prefHeight="35.0" prefWidth="33.0" />
-                                <Button id="searchBtn" fx:id="btnSearchCustomer" mnemonicParsing="false" onAction="#searchCustomer" text="Netejar" />
+                                <Button id="searchBtn" fx:id="btnSearchProduct" mnemonicParsing="false" onAction="#Clear" text="Netejar" />
                             </children>
                         </HBox>
                     </children>
