19/12/2022 -> bnClear selector de dates

--- a/src/main/resources/presentacio/comandes.fxml
+++ b/src/main/resources/presentacio/comandes.fxml
@@ -89,12 +89,14 @@
 
                      <children>
 
-                        <DatePicker id="datePicker" fx:id="datePickerFrom" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="150.0"/>
+                        <DatePicker id="datePicker" fx:id="datePickerFrom" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="150.0" />
 
                         <Separator opacity="0.0" orientation="VERTICAL" prefWidth="15.0" />
 
-                        <DatePicker id="datePicker" fx:id="datePickerTo" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="150.0"/>
+                        <DatePicker id="datePicker" fx:id="datePickerTo" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="150.0" />
 
+                        <Separator opacity="0.0" orientation="VERTICAL" prefWidth="15.0" />
+                        <Button fx:id="ClearButton" mnemonicParsing="false" onAction="#ClearHores" text="Netejar" />
                         <Separator opacity="0.0" orientation="VERTICAL" prefWidth="15.0" />
 
                      </children>
